--- a/src/components/Speakers/Speakers.scss
+++ b/src/components/Speakers/Speakers.scss
@@ -3,6 +3,7 @@
 .speakers {
   padding: 75px 0;
   margin: 0 auto;
+  width: 75%;
 }
 
 .header {
